--- a/DemoProject/app/src/main/AndroidManifest.xml
+++ b/DemoProject/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -72,7 +73,7 @@
         <activity android:name=".ServicesDemo.BoundService.BindServiceWithBinderClassDemoActivity" />
 
         <service
-            android:name=".ServicesDemo.BoundService.ExtendingBinderService"
+            android:name=".ServicesDemo.BoundService.ExtendedBinderClassService"
             android:exported="false" />
 
         <activity android:name=".ServicesDemo.BoundService.BindServiceWithMessengerDemoActivity" />
@@ -82,7 +83,8 @@
             android:exported="false" />
 
         <activity android:name=".ServicesDemo.ThreadPoolExecutorDemo.ThreadPoolExecutorDemoActivity" />
-        <activity android:name=".ServicesDemo.AsyncTaskDemo.AsyncTaskDemoActivity"></activity>
+        <activity android:name=".ServicesDemo.AsyncTaskDemo.AsyncTaskDemoActivity" />
+        <activity android:name=".ServicesDemo.HandlerThreadDemo.HandlerThreadDemoActivity"></activity>
     </application>
 
 </manifest>
