minor update - handle configuration changes in memory cache - add disk cache (incomplete because of missing files from documentations)

--- a/DemoProject/app/src/main/AndroidManifest.xml
+++ b/DemoProject/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <application
         android:name=".CommunicationBetweenActivities.UsingApplicationObject.MyApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:hardwareAccelerated="false"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -99,6 +99,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ImagesTopic.CacheImageUsingDiskDemoActivity" />
     </application>
 
 </manifest>
