--- a/DemoProject/app/src/main/AndroidManifest.xml
+++ b/DemoProject/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
 
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
         </activity>
         <activity android:name=".DifferentFlagsTopic.DifferentFlagsTopicActivity1" />
         <activity android:name=".DifferentFlagsTopic.DifferentFlagsTopicActivity2" />
@@ -92,14 +92,9 @@
         <activity android:name=".ImagesTopic.ImagesTopicActivity" />
         <activity android:name=".ImagesTopic.LoadImageFromSdCardDemoActivity" />
         <activity android:name=".ImagesTopic.LoadImageFromUrlDemoActivity" />
-        <activity android:name=".ImagesTopic.CacheImageUsingMemoryDemoActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ImagesTopic.CacheImageUsingMemoryDemoActivity" />
         <activity android:name=".ImagesTopic.CacheImageUsingDiskDemoActivity" />
+        <activity android:name=".ImagesTopic.CacheImageUsingExternalLibraryDemoActivity" />
     </application>
 
 </manifest>
