add demos - add AudioPlayer using MediaPlayer - add AudioPlayer using ExoPlayer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity android:name=".IntentFlags.IntentFlagsActivity" />
         <activity android:name=".IntentFlags.IntentFlagsSecondActivity" />
@@ -94,7 +94,14 @@
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingDiskActivity" />
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingExternalLibraryActivity" />
         <activity android:name=".ExternalHardware.ExternalHardwareTopicActivity" />
-        <activity android:name=".Sensors.SensorTopicActivity"></activity>
+        <activity android:name=".Sensors.SensorTopicActivity" />
+        <activity android:name=".ExternalHardware.AudioPlayer.AudioPlayerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
