--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile('com.sangcomz:FishBun:0.7.1@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
@@ -39,8 +42,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
-    compile('com.sangcomz:FishBun:0.7.1@aar') {
-        transitive = true
-    }
+    compile 'com.google.android.gms:play-services:11.0.4'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+apply plugin: 'com.android.application'
