--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.location.network" />
     <uses-feature android:name="android.hardware.location.gps" />
+    <uses-feature android:name="android.hardware.camera2.full" />
 
     <application
         android:name=".CommunicationBetweenActivities.UsingApplicationObject.MyApplication"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -100,11 +102,13 @@
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingDiskActivity" />
         <activity android:name=".ImagesProcessing.CacheImages.CacheImageUsingExternalLibraryActivity" />
         <activity android:name=".ExternalHardware.ExternalHardwareTopicActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".Sensors.SensorTopicActivity" />
         <activity android:name=".ExternalHardware.AudioPlayer.AudioPlayerActivity" />
@@ -112,11 +116,19 @@
         <activity android:name=".ExternalHardware.VideoPlayer.VideoPlayerUsingExoPlayerActivity" />
         <activity android:name=".ExternalHardware.Gallery.ChooseImageFromGalleryActivity" />
         <activity android:name=".ExternalHardware.Gallery.CustomGalleryActivity" />
-        <activity
-            android:name=".ExternalHardware.GPS.ObtainLocationUsingLocationManagerActivity"
-            android:launchMode="singleTop" />
+        <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingLocationManagerActivity" />
         <activity android:name=".ExternalHardware.GPS.ObtainLocationUsingGooglePlayServicesActivity" />
-        <activity android:name=".ExternalHardware.Camera.TakePhotoUsingDefaultCameraActivity"></activity>
+        <activity android:name=".ExternalHardware.Camera.TakePhotoTopicActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ExternalHardware.Camera.CameraAPI.TakePhotoUsingCameraApiActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".ExternalHardware.Camera.TakePhotoUsingCamera2ApiActivity"></activity>
     </application>
 
 </manifest>
